--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 services:
   postgres:
     image: 'postgres:13.3'
+    container_name: postgres
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: myuser
